# detroit-election-maps

./: .eleventy.js  .env.sample  .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml  wrangler.toml
data/elections/2024/: general-turnout.json  general.xlsx  primary-turnout.json  primary.xlsx
data/elections/2025/: primary-at-large.json  primary-district-2.json  primary-district-5.json  primary-district-7.json  primary-mayor.json  primary-turnout.json
data/elections/2025/general/: 0.json  14.json  15.json  2.json  3.json  4.json
data/precincts-counting-boards/: Copy of 2025 Detroit General Election Counting_Boards_by_City_Council_District (2).xlsx  Copy of Counting Boads for General Election 2024 v2.xlsx - Sheet4.csv
scripts/: clean_wayne_pdf.py  process_enhancedvoting.py  process_enhancedvoting_turnout.py  process_interim_results.py  process_results.py  process_turnout.py  process_wayne_pdf.py
site/: 404.md  about.md  style.11ty.js
site/_data/: site.js
site/_includes/: detroit.njk  metadata.njk  nav.njk
site/_layouts/: base.njk  embed.njk
site/elections/: 2024-general.njk  2025-primary.njk
src/: main.js
src/css/: base.css  content.css  map.css  nav.css  style.css
src/js/: elections.js  index.js  map.jsx  mapStyle.js
src/js/components/: geocoder.jsx  legend.jsx  map.jsx  popup-content.jsx  popup.jsx
src/js/pages/: map-page.jsx
src/js/utils/: data.js  index.js  map.js
