[tool.poetry]
name = "detroit-election-maps"
version = "0.1.0"
description = ""
authors = ["pjsier <pjsier@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
